; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_dp_mst_topology.c_test_calc_pbn_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_dp_mst_topology.c_test_calc_pbn_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [81 x i8] c"PBN calculation test failed - clock %d, bpp %d, expected PBN %d, actual PBN %d.\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_calc_pbn_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_calc_pbn_mode() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @drm_dp_calc_pbn_mode(i32 154000, i32 30)
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 689
  br i1 %5, label %6, label %11

6:                                                ; preds = %0
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([81 x i8], [81 x i8]* @.str, i64 0, i64 0), i32 154000, i32 30, i32 689, i32 %7)
  %9 = load i32, i32* @EINVAL, align 4
  %10 = sub nsw i32 0, %9
  store i32 %10, i32* %1, align 4
  br label %30

11:                                               ; preds = %0
  %12 = call i32 @drm_dp_calc_pbn_mode(i32 234000, i32 30)
  store i32 %12, i32* %2, align 4
  %13 = load i32, i32* %2, align 4
  %14 = icmp ne i32 %13, 1047
  br i1 %14, label %15, label %20

15:                                               ; preds = %11
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([81 x i8], [81 x i8]* @.str, i64 0, i64 0), i32 234000, i32 30, i32 1047, i32 %16)
  %18 = load i32, i32* @EINVAL, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %1, align 4
  br label %30

20:                                               ; preds = %11
  %21 = call i32 @drm_dp_calc_pbn_mode(i32 297000, i32 24)
  store i32 %21, i32* %2, align 4
  %22 = load i32, i32* %2, align 4
  %23 = icmp ne i32 %22, 1063
  br i1 %23, label %24, label %29

24:                                               ; preds = %20
  %25 = load i32, i32* %2, align 4
  %26 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([81 x i8], [81 x i8]* @.str, i64 0, i64 0), i32 297000, i32 24, i32 1063, i32 %25)
  %27 = load i32, i32* @EINVAL, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %1, align 4
  br label %30

29:                                               ; preds = %20
  store i32 0, i32* %1, align 4
  br label %30

30:                                               ; preds = %29, %24, %15, %6
  %31 = load i32, i32* %1, align 4
  ret i32 %31
}

declare dso_local i32 @drm_dp_calc_pbn_mode(i32, i32) #1

declare dso_local i32 @DRM_ERROR(i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
